--- a/Droid/packages.config
+++ b/Droid/packages.config
@@ -1,6 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Xamarin.Android.Support.v4" version="21.0.3.0" targetFramework="MonoAndroid51" />
-  <package id="Xamarin.Forms" version="1.3.5.6335" targetFramework="MonoAndroid51" />
-  <package id="Xamarin.Insights" version="1.10.6" targetFramework="MonoAndroid51" />
+  <package id="Plugin.CurrentActivity" version="1.0.1" targetFramework="MonoAndroid51" />
+  <package id="Plugin.Permissions" version="1.1.4" targetFramework="MonoAndroid51" />
+  <package id="Xam.Plugin.Media" version="2.1.2" targetFramework="MonoAndroid51" />
+  <package id="Xamarin.Android.Support.Design" version="23.0.1.3" targetFramework="MonoAndroid51" />
+  <package id="Xamarin.Android.Support.v4" version="23.0.1.3" targetFramework="MonoAndroid51" />
+  <package id="Xamarin.Android.Support.v7.AppCompat" version="23.0.1.3" targetFramework="MonoAndroid51" />
+  <package id="Xamarin.Android.Support.v7.CardView" version="23.0.1.3" targetFramework="MonoAndroid51" />
+  <package id="Xamarin.Android.Support.v7.MediaRouter" version="23.0.1.3" targetFramework="MonoAndroid51" />
+  <package id="Xamarin.Forms" version="2.0.0.6490" targetFramework="MonoAndroid51" />
+  <package id="Xamarin.Insights" version="1.11.3" targetFramework="MonoAndroid51" />
 </packages>
