--- a/iOS/packages.config
+++ b/iOS/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Xam.Plugin.Media" version="2.1.2" targetFramework="xamarinios10" />
   <package id="Xamarin.Forms" version="2.0.0.6490" targetFramework="xamarinios10" />
   <package id="Xamarin.Insights" version="1.11.3" targetFramework="xamarinios10" />
   <package id="Xamarin.TestCloud.Agent" version="0.17.1" targetFramework="xamarinios10" />
