--- a/Droid/packages.config
+++ b/Droid/packages.config
@@ -8,6 +8,8 @@
   <package id="Xamarin.Android.Support.v7.AppCompat" version="23.0.1.3" targetFramework="MonoAndroid51" />
   <package id="Xamarin.Android.Support.v7.CardView" version="23.0.1.3" targetFramework="MonoAndroid51" />
   <package id="Xamarin.Android.Support.v7.MediaRouter" version="23.0.1.3" targetFramework="MonoAndroid51" />
+  <package id="Xamarin.FFImageLoading" version="2.0.5" targetFramework="MonoAndroid51" />
+  <package id="Xamarin.FFImageLoading.Forms" version="2.0.5" targetFramework="MonoAndroid51" />
   <package id="Xamarin.Forms" version="2.0.0.6490" targetFramework="MonoAndroid51" />
   <package id="Xamarin.Insights" version="1.11.3" targetFramework="MonoAndroid51" />
 </packages>
