iOS - image pick, crop & resize

--- a/iOS/packages.config
+++ b/iOS/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="DLToolkit.PageFactory.Forms" version="1.0.6" targetFramework="xamarinios10" />
+  <package id="DLToolkit.PageFactory.Shared" version="1.0.6" targetFramework="xamarinios10" />
   <package id="WebP.Touch" version="1.0.1" targetFramework="xamarinios10" />
   <package id="Xam.Plugin.Media" version="2.1.2" targetFramework="xamarinios10" />
   <package id="Xamarin.FFImageLoading" version="2.0.5" targetFramework="xamarinios10" />
