--- a/iOS/ImagePickerSample.iOS.csproj
+++ b/iOS/ImagePickerSample.iOS.csproj
@@ -122,6 +122,12 @@
     <Reference Include="FFImageLoading.Forms.Touch">
       <HintPath>..\..\packages\Xamarin.FFImageLoading.Forms.2.0.5\lib\Xamarin.iOS10\FFImageLoading.Forms.Touch.dll</HintPath>
     </Reference>
+    <Reference Include="DLToolkit.PageFactory.Shared">
+      <HintPath>..\..\packages\DLToolkit.PageFactory.Shared.1.0.6\lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10\DLToolkit.PageFactory.Shared.dll</HintPath>
+    </Reference>
+    <Reference Include="DLToolkit.PageFactory.Forms">
+      <HintPath>..\..\packages\DLToolkit.PageFactory.Forms.1.0.6\lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10\DLToolkit.PageFactory.Forms.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <ImageAsset Include="Resources\Images.xcassets\AppIcons.appiconset\Contents.json" />
@@ -137,6 +143,17 @@
   <ItemGroup>
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
+    <Compile Include="FFImageLoading.Transformations.Touch\BlurredTransformation.cs" />
+    <Compile Include="FFImageLoading.Transformations.Touch\CircleTransformation.cs" />
+    <Compile Include="FFImageLoading.Transformations.Touch\ColorSpaceTransformation.cs" />
+    <Compile Include="FFImageLoading.Transformations.Touch\CornersTransformation.cs" />
+    <Compile Include="FFImageLoading.Transformations.Touch\CropTransformation.cs" />
+    <Compile Include="FFImageLoading.Transformations.Touch\FlipTransformation.cs" />
+    <Compile Include="FFImageLoading.Transformations.Touch\GrayscaleTransformation.cs" />
+    <Compile Include="FFImageLoading.Transformations.Touch\RotateTransformation.cs" />
+    <Compile Include="FFImageLoading.Transformations.Touch\RoundedTransformation.cs" />
+    <Compile Include="FFImageLoading.Transformations.Touch\SepiaTransformation.cs" />
+    <Compile Include="FFImageLoading.Transformations.Touch\Extensions\ColorExtensions.cs" />
   </ItemGroup>
   <Import Project="..\ImagePickerSample\ImagePickerSample.projitems" Label="Shared" Condition="Exists('..\ImagePickerSample\ImagePickerSample.projitems')" />
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
